--- a/src/components/pages/login/Login.css
+++ b/src/components/pages/login/Login.css
@@ -12,7 +12,7 @@
   gap: 0;
 }
 
-.login__container {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,22 +29,7 @@
   background: white;
   box-shadow: 3px 17px 32px 0px #828282;
 }
-.login__container-error {
-  text-align: center;
-}
-.login__container-error span {
-  font-size: 1.3rem;
-  margin-inline: 0.7rem;
-  cursor: pointer;
-}
-.login__container .error-text {
-  color: red;
-  background: rgba(211, 118, 118, 0.377);
-  padding: 0.2rem 0.3rem;
-  border: 1px solid red;
-  border-radius: 0.3rem;
-}
-.login__container-header {
+.container .header {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -52,21 +37,24 @@
   flex-wrap: nowrap;
   gap: 0.5rem;
 }
-.login__container-header img {
+.container .header img {
   width: 5rem;
 }
-.login__container:last-child a {
+.container:last-child a,
+.container .reset {
   display: inline-block;
+  cursor: pointer;
   margin-left: 0.5rem;
   text-decoration: none;
   color: #353535;
   font-weight: bold;
 }
-.login__container:last-child a:hover {
+.container:last-child a:hover,
+.container .reset:hover {
   text-decoration: underline;
 }
 
-.login__container-form {
+.form {
   flex: 1 1 auto;
   width: 100%;
   display: flex;
@@ -76,7 +64,7 @@
   flex-wrap: nowrap;
   gap: 2rem;
 }
-.login__container-form input {
+.form input {
   width: 90%;
   height: 2rem;
   font-size: 1rem;
@@ -86,11 +74,11 @@
   border-bottom: 2px solid black;
   background: transparent;
 }
-.login__container-form .error {
+.form .error {
   background: rgba(211, 118, 118, 0.377);
   border-color: red;
 }
-.login__container-form button {
+.form button {
   background: transparent;
   cursor: pointer;
   padding: 0.3rem 1.5rem;
@@ -98,7 +86,7 @@
   border: 1px solid rgba(89, 89, 89, 0.87);
   border-radius: 0.2rem;
 }
-.login__container-form button:hover {
+.form button:hover {
   background: black;
   color: white;
   box-shadow: 3px 3px 32px 0px #828282;
