--- a/src/scss/components/FormContainer.scss
+++ b/src/scss/components/FormContainer.scss
@@ -23,7 +23,8 @@
   @include m.border(
     $width: 0.3rem,
     $color: rgba(0, 0, 0, 0.808),
-    $radius: 0.5rem
+    $radius: 0.5rem,
+    $side:""
   );
   background: white;
   -webkit-box-shadow: 3px 17px 32px 0px #828282;
@@ -76,7 +77,7 @@
     cursor: pointer;
     padding: 0.3rem 1.5rem;
     font-size: 1rem;
-    @include m.border($color: rgba(89, 89, 89, 0.87), $radius: 0.2rem);
+    @include m.border($color: rgba(89, 89, 89, 0.87), $radius: 0.2rem, $side:"");
     &:hover {
       background: black;
       color: white;
