--- a/src/scss/components/Navigation.css
+++ b/src/scss/components/Navigation.css
@@ -5,11 +5,31 @@
   align-items: center;
   flex-wrap: nowrap;
   gap: 0;
-  background: #e9e9e9;
+  position: relative;
+  background: #ffffff;
   color: #2c2c2c;
-  width: 15%;
-  min-width: 220px;
+  width: 19%;
   height: 100%;
+  box-shadow: 0 2px 3px 0px;
+}
+.nav__toggle {
+  position: absolute;
+  cursor: pointer;
+  top: 2.5rem;
+  right: -1.15rem;
+  overflow: hidden;
+  background: white;
+  width: 38px;
+  padding: 2px;
+  border: 1px solid rgba(0, 0, 0, 0.397);
+  border-radius: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 0;
+  box-shadow: 0px 0px 7px 1px #4d4c4cce;
 }
 .nav__logo {
   display: flex;
@@ -33,9 +53,127 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: nowrap;
   gap: 1.5rem;
+}
+.nav__logout {
+  padding: 1rem 3rem;
+  cursor: pointer;
+  border-top: 1px solid rgba(223, 223, 223, 0.781);
+  border-radius: 0;
+}
+.nav__logout svg {
+  margin-right: 0.3rem;
+}
+.nav__logout:hover {
+  text-decoration: underline;
+}
+
+@-webkit-keyframes rotateArrowClockWise {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(180deg);
+  }
+}
+
+@keyframes rotateArrowClockWise {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(180deg);
+  }
+}
+@-webkit-keyframes rotateArrowCounterClockWise {
+  0% {
+    transform: rotateZ(180deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+@keyframes rotateArrowCounterClockWise {
+  0% {
+    transform: rotateZ(180deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+@-webkit-keyframes navDrawerHide {
+  0% {
+    width: initial;
+  }
+  100% {
+    width: 1.5%;
+  }
+}
+@keyframes navDrawerHide {
+  0% {
+    width: initial;
+  }
+  100% {
+    width: 1.5%;
+  }
+}
+@-webkit-keyframes navDrawerShow {
+  0% {
+    width: 1.5%;
+  }
+  100% {
+    width: initial;
+  }
+}
+@keyframes navDrawerShow {
+  0% {
+    width: 1.5%;
+  }
+  100% {
+    width: initial;
+  }
+}
+.rotateClockWise {
+  -webkit-animation: rotateArrowClockWise 0.2s ease forwards;
+          animation: rotateArrowClockWise 0.2s ease forwards;
+}
+
+.rotateCounterClockWise {
+  -webkit-animation: rotateArrowCounterClockWise 0.2s ease forwards;
+          animation: rotateArrowCounterClockWise 0.2s ease forwards;
+}
+
+.hide_nav {
+  -webkit-animation: navDrawerHide 0.15s ease forwards;
+          animation: navDrawerHide 0.15s ease forwards;
+}
+.hide_nav .nav__toggle {
+  visibility: visible;
+}
+.hide_nav .nav__header {
+  visibility: hidden;
+}
+.hide_nav .nav__links {
+  visibility: hidden;
+}
+.hide_nav .nav__logout {
+  visibility: hidden;
+}
+
+.show_nav {
+  -webkit-animation: navDrawerShow 0.15s ease forwards;
+          animation: navDrawerShow 0.15s ease forwards;
+}
+.show_nav .nav__header {
+  visibility: visible;
+}
+.show_nav .nav__links {
+  visibility: visible;
+}
+.show_nav .nav__logout {
+  visibility: visible;
 }
 
 .nav__header {
@@ -44,7 +182,6 @@
   border-radius: 0;
 }
 .nav__header-user {
-  padding: 0.5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -55,14 +192,17 @@
 
 .nav__header-user {
   margin-block: 1.5rem;
+  padding: 0.5rem 1.5rem;
 }
 .nav__header-user-email {
   font-size: 0.85rem;
 }
 .nav__header-user img {
   width: 3rem;
-  border-radius: 50%;
   background: white;
+  border: 1px solid #464668;
+  border-radius: 0;
+  border-radius: 50%;
 }
 .nav__header-user_meta {
   display: flex;
@@ -76,6 +216,8 @@
 .nav__header-user_meta button {
   background: white;
   border: none;
+  border: 1px solid black;
+  border-radius: 0;
   padding: 0.3rem 0.8rem;
   border-radius: 0.5rem;
   font-size: 0.75rem;
@@ -87,8 +229,17 @@
 }
 
 .nav__links li {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 0.3rem;
   margin: 0;
-  padding: 0;
-  text-align: left;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+.nav__links li:hover {
+  text-decoration: underline;
 }
 /*# sourceMappingURL=Navigation.css.map */
