--- a/src/scss/components/FormContainer.scss
+++ b/src/scss/components/FormContainer.scss
@@ -24,7 +24,7 @@
     $width: 0.3rem,
     $color: rgba(0, 0, 0, 0.808),
     $radius: 0.5rem,
-    $side:""
+    $side: ""
   );
   background: white;
   -webkit-box-shadow: 3px 17px 32px 0px #828282;
@@ -55,7 +55,7 @@
 }
 
 .container__form {
-  flex: 1 1 auto;
+  flex: 1 0 auto;
   width: 100%;
   @include m.flex($dir: column, $gap: 2rem);
   input {
@@ -77,7 +77,11 @@
     cursor: pointer;
     padding: 0.3rem 1.5rem;
     font-size: 1rem;
-    @include m.border($color: rgba(89, 89, 89, 0.87), $radius: 0.2rem, $side:"");
+    @include m.border(
+      $color: rgba(89, 89, 89, 0.87),
+      $radius: 0.2rem,
+      $side: ""
+    );
     &:hover {
       background: black;
       color: white;
