--- a/src/scss/components/Navigation.css
+++ b/src/scss/components/Navigation.css
@@ -39,7 +39,7 @@
 .nav__logo {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
   gap: 0;
@@ -58,7 +58,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: nowrap;
   gap: 1.5rem;
 }
@@ -97,7 +97,7 @@
     width: initial;
   }
   100% {
-    width: 1.5%;
+    width: 2.5%;
   }
 }
 @keyframes navDrawerHide {
@@ -105,7 +105,7 @@
     width: initial;
   }
   100% {
-    width: 1.5%;
+    width: 2.5%;
   }
 }
 .rotateClockWise {
