--- a/src/components/components/Organization.scss
+++ b/src/components/components/Organization.scss
@@ -69,3 +69,25 @@ section {
     }
   }
 }
+
+table {
+  border: 1px solid black;
+  border-collapse: collapse;
+  width: 80%;
+}
+
+th {
+  background: rgb(21, 21, 21);
+  color: white;
+  padding: 0.3rem 0.9rem;
+  border: 1px solid black;
+}
+td {
+  text-align: center;
+  padding: 0.3rem 0.9rem;
+  border: 1px solid black;
+}
+
+td:last-child {
+  cursor: pointer;
+}
