--- a/src/scss/components/Navigation.css
+++ b/src/scss/components/Navigation.css
@@ -10,6 +10,7 @@
   color: #2c2c2c;
   height: 100%;
   box-shadow: 0 2px 4px 0px;
+  z-index: 999;
 }
 .nav__toggle {
   position: absolute;
@@ -162,7 +163,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: nowrap;
   gap: 0.5rem;
 }
