--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -1,6 +1,7 @@
 .home_container {
   width: 100%;
   height: 100vh;
+  border: 1px solid red;
   display: flex;
   flex-direction: row;
   justify-content: center;
