--- a/src/components/pages/home/Home.scss
+++ b/src/components/pages/home/Home.scss
@@ -3,6 +3,7 @@
 .home_container {
   width: 100%;
   height: 100vh;
+  border: 1px solid red;
   @include m.flex();
   section {
     background: #ffffffaa;
