--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -1,11 +1,10 @@
 .home_container {
   width: 100%;
-  height: 100vh;
-  border: 1px solid red;
+  min-height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: nowrap;
   gap: 0;
 }
