--- a/src/components/pages/home/Home.scss
+++ b/src/components/pages/home/Home.scss
@@ -2,9 +2,8 @@
 
 .home_container {
   width: 100%;
-  height: 100vh;
-  border: 1px solid red;
-  @include m.flex();
+  min-height: 100vh;
+  @include m.flex($cross: flex-start);
   section {
     background: #ffffffaa;
     flex: 1 1 auto;
