--- a/src/scss/components/Navigation.scss
+++ b/src/scss/components/Navigation.scss
@@ -5,7 +5,7 @@
   position: relative;
   background: #ffffff;
   color: rgb(44, 44, 44);
-  height: 100%;
+  height: 100vh;
   box-shadow: 0 2px 4px 0px;
   z-index: 999;
   &__toggle {
